--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by
-      <a href="https://github.com/Wael-Orraby" target="_blank">Wael Orraby</a>
+      <a href="https://www.frontendmentor.io/profile/Wael-Orraby" target="_blank">Wael Orraby</a>
     </div>
   </body>
 </html>
